[gd_scene load_steps=11 format=3 uid="uid://dwvtskc442rt4"]

[ext_resource type="Script" uid="uid://tgufosu2e6ow" path="res://xr_scene_setup.gd" id="1_r2gvp"]
[ext_resource type="PackedScene" uid="uid://cnwp7ndjr4s8y" path="res://Quest2Controllers/OculusQuest2TouchController_Left.gltf" id="2_wu02t"]
[ext_resource type="Script" uid="uid://0isotny82r68" path="res://controller.gd" id="3_1mvha"]
[ext_resource type="PackedScene" uid="uid://bc8lh0rihgxvi" path="res://Quest2Controllers/OculusQuest2TouchController_Right.gltf" id="3_vtxcx"]
[ext_resource type="Material" uid="uid://do8gk8fs5d7ie" path="res://Materials/green.tres" id="4_vtxcx"]

[sub_resource type="SphereShape3D" id="SphereShape3D_vtxcx"]
radius = 0.1

[sub_resource type="Environment" id="Environment_r2gvp"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_mbfms"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1mvha"]
size = Vector3(100, 0.1, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_od5ju"]
size = Vector3(0.5, 0.5, 0.5)

[node name="XR_scene" type="Node3D"]
script = ExtResource("1_r2gvp")

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]

[node name="XRController3D_left" type="XRController3D" parent="XROrigin3D"]
tracker = &"left_hand"

[node name="OculusQuest2TouchController_Left" parent="XROrigin3D/XRController3D_left" instance=ExtResource("2_wu02t")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="XRController3D_right" type="XRController3D" parent="XROrigin3D"]
tracker = &"right_hand"
script = ExtResource("3_1mvha")

[node name="OculusQuest2TouchController_Right" parent="XROrigin3D/XRController3D_right" instance=ExtResource("3_vtxcx")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Area3D" type="Area3D" parent="XROrigin3D/XRController3D_right"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="XROrigin3D/XRController3D_right/Area3D"]
shape = SubResource("SphereShape3D_vtxcx")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_r2gvp")
camera_attributes = SubResource("CameraAttributesPractical_mbfms")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(0.959151, -0.142498, 0.244384, 0, 0.863871, 0.503714, -0.282894, -0.483138, 0.828583, 0, 0, 0)

[node name="RigidBody3D" type="StaticBody3D" parent="WorldEnvironment"]

[node name="Ground_plane" type="CSGBox3D" parent="WorldEnvironment/RigidBody3D"]
size = Vector3(100, 0.1, 100)
material = ExtResource("4_vtxcx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldEnvironment/RigidBody3D"]
shape = SubResource("BoxShape3D_1mvha")

[node name="Box" type="RigidBody3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, 0.5)

[node name="CSGBox3D" type="CSGBox3D" parent="WorldEnvironment/Box"]
size = Vector3(0.5, 0.5, 0.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldEnvironment/Box"]
shape = SubResource("BoxShape3D_od5ju")

[connection signal="button_pressed" from="XROrigin3D/XRController3D_right" to="XROrigin3D/XRController3D_right" method="_on_button_pressed"]
[connection signal="button_released" from="XROrigin3D/XRController3D_right" to="XROrigin3D/XRController3D_right" method="_on_button_released"]
[connection signal="area_entered" from="XROrigin3D/XRController3D_right/Area3D" to="XROrigin3D/XRController3D_right" method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="XROrigin3D/XRController3D_right/Area3D" to="XROrigin3D/XRController3D_right" method="_on_area_3d_area_exited"]
[connection signal="body_entered" from="XROrigin3D/XRController3D_right/Area3D" to="XROrigin3D/XRController3D_right" method="_on_area_3d_area_entered"]
[connection signal="body_exited" from="XROrigin3D/XRController3D_right/Area3D" to="XROrigin3D/XRController3D_right" method="_on_area_3d_area_exited"]
